# agentic-research-assistant

./: README.md  pyproject.toml  requirements.txt
agents/: __init__.py  analyst.py  critic.py  orchestrator.py  researcher.py  synthesizer.py  tools.py
api/: main.py  schemas.py
frontend/: dashboard.html
models/: __init__.py  llm.py
rag/: __init__.py  chunker.py  embeddings.py  pipeline.py  reranker.py  retriever.py
utils/: __init__.py  config.py  metrics.py  tracing.py
